--- a/index.html
+++ b/index.html
@@ -1,26 +1,54 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <link rel="stylesheet" href="styles.css" />
-    <title>Portfolio</title> 
+    <link rel="stylesheet" href="src/styles.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap"rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="UTF-8">
 </head>
+
 <body>
     <section class="hero">
         <nav>
-            <div>Logo</div>
+            <img class="logo" src="src/images/logo.png" alt="Amber Chiodini's logo"/>
             <ul>
                 <li>About Me</li>
                 <li>Projects</li>
                 <li>Contact Me</li>
             </ul>
         </nav>
+        <div class="hero-area">
+            <div class="hero-text">
+                <h1>Amber Chiodini</h1>
+                <p>Full Stack Developer</p>
+                <div class="button">About Me</div>
+            </div>
+            <div class="socials">
+                <div>
+                    <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/amberchiodini">
+                        <i class="fa fa-twitter" style="font-size:36px; color: white"></i>
+                    </a>
+                </div>
+                <div>
+                    <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/amber-chiodini-9699b211b">
+                    <i class="fa fa-linkedin-square" style="font-size:36px; color:white"></i>
+                    </a>
+                </div>
+                <div>
+                    <a target="_blank" rel="noopener noreferrer" href="https://github.com/amberchiodini">
+                    <i class="fa fa-github" style="font-size:36px; color:white"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
     </section>
     <section></section>
     <section></section>
     <footer></footer>
 
-
-    <script src="app.js"></script>
+    <script src="src/app.js"></script>
 </body>
+
 </html>
