Made an about me section

--- a/index.html
+++ b/index.html
@@ -41,10 +41,23 @@
                     <i class="fa fa-github" style="font-size:36px; color:white"></i>
                     </a>
                 </div>
+                <div>
+                    <a target="_blank" rel="noopener noreferrer" href="https://swhn19.com">
+                    <i class="fa fa-podcast" style="font-size:36px; color:white"></i>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
-    <section></section>
+    <section class="sub-section">
+        <div class="information">
+            <h2>About Me</h2>
+            <p>Hello, my name is Amber Chiodini. I am a Software Developer and Co-host of So What Happens Next.</p>
+        </div>
+        <div class="headshot-container">
+            <img class="headshot" src="src/images/new_profile.jpg"/>
+        </div>
+    </section>
     <section></section>
     <footer></footer>
 
