Changed photos & fixed projects section

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <h2>Projects</h2>
         <div class="project-container">
             <div class="project-card">
-                <img class="project-image" src="src/images/Keep on Giftin'.png" alt="" />
+                <img class="project-image" src="src/images/gift.png" alt="" />
                 <h3>Keep on Giftin'</h3>
                 <p class="subtext">An application that reminds the user of certain dates to send to friends and family gifts and/or cards.</p>
                 <hr />
@@ -73,25 +73,25 @@
                 <p class="subtext"><a target="_blank" rel="noopener noreferrer" class="project-link" href="https://github.com/girl-power-5/ubiquitous-giggle">GitHub Repository</a></p>
             </div>
             <div class="project-card">
-                <img class="project-image" src="src/images/imok_logo.png" alt="" />
+                <img class="project-image" src="src/images/dating.png" alt="" />
                 <h3>IMOK</h3>
-                <p class="subtext">An application that gives the user the ability to let others know their current location when they go out so that if something were to happen, someone would be notified.</p>
+                <p class="subtext">An application that gives the user the ability to let others know their current location when they go out.</p>
                 <hr />
                 <p class="subtext"><a target="_blank" rel="noopener noreferrer" class="project-link" href="https://imok-squad.herokuapp.com/">Deployed App</a></p>
                 <p class="subtext"><a target="_blank" rel="noopener noreferrer" class="project-link" href="https://github.com/girl-power-5/coffee-and-llamas">GitHub Repository</a></p>
             </div>
             <div class="project-card">
-                <img class="project-image" src="src/images/burger.png" alt="" />
+                <img class="project-image" src="src/images/hamburger.png" alt="" />
                 <h3>Burger App</h3>
-                <p class="subtext">An application that allows the user to input the names of burgers that they want to eat, to view their history of burger logs, and to store each burger into the database as 'eaten' or 'uneaten'.</p>
+                <p class="subtext">An application that allows the user to input and savethe names of burgers that they want to eat.</p>
                 <hr />
                 <p class="subtext"><a target="_blank" rel="noopener noreferrer" class="project-link" href="https://polar-plains-27882.herokuapp.com/">Deployed App</a></p>
                 <p class="subtext"><a target="_blank" rel="noopener noreferrer" class="project-link" href="https://github.com/amberchiodini/burger">GitHub Repository</a></p>
             </div>
             <div class="project-card"> 
-                <img class="project-image" src="src/images/eatsandbeats.png" alt="" />
+                <img class="project-image" src="src/images/cooking.png" alt="" />
                 <h3>Eats & Beats</h3>
-                <p class="subtext">An application that brings a unique experience to the user by bringing up recipes and music playlist according to their preferences.</p>
+                <p class="subtext">An application that brings a unique experience to the user by bringing up recipes and a music playlist.</p>
                 <hr />
                 <p class="subtext"><a target="_blank" rel="noopener noreferrer" class="project-link" href="https://team-norm-1.github.io/project-1/">Deployed App</a></p>
                 <p class="subtext"><a target="_blank" rel="noopener noreferrer" class="project-link" href="https://github.com/Team-Norm-1/project-1">GitHub Repository</a></p>
