Added button for resume

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <div class="information">
             <h2>About Me</h2>
             <p>Hello, my name is Amber Chiodini. I am a Software Developer and Co-host of So What Happens Next.</p>
+            <div class="button-two"><a target="_blank" rel="noopener noreferrer" href="src/images/Chiodini_Resume.pdf">Resume</a></div>
         </div>
         <div class="headshot-container">
             <img class="headshot" src="src/images/new_profile.jpg"/>
