Added who am i section with animated icons

--- a/index.html
+++ b/index.html
@@ -63,6 +63,29 @@
         </div>
     </section>
     <section class="sub-section-alternative" id="projects">
+        <h2>Who Am I?</h2>
+        <div class="project-container">
+            <div class="project-card">
+                <lord-icon src="https://cdn.lordicon.com//oswatybr.json" trigger="hover" colors="primary:#1c1d25,secondary:#ff7f50" style="width:200px;height:200px"></lord-icon>
+                <p class="subtext">Laboratory research technician investigating the causes of Alzheimer's disease.</p>
+                <hr />
+                <p class="subtext"><a target="_blank" rel="noopener noreferrer" class="project-link" href="https://www.brain.northwestern.edu/">Link to Website</a></p>
+            </div>
+            <div class="project-card">
+                <lord-icon src="https://cdn.lordicon.com//fpipqhrr.json" trigger="hover" colors="primary:#121331,secondary:#ff7f50" style="width:200px;height:200px"></lord-icon>
+                <p class="subtext">Co-host of a podcast where we guess the plot, watch the movie, and give our first impressions.</p>
+                <hr />
+                <p class="subtext"><a target="_blank" rel="noopener noreferrer" class="project-link" href="https://swhn19.com">Link to Website</a></p>
+            </div>
+            <div class="project-card">
+                <lord-icon src="https://cdn.lordicon.com//anihkfxp.json" trigger="hover" colors="primary:#1c1d25,secondary:#ff7f50" style="width:200px;height:200px"></lord-icon>
+                <p class="subtext">Software developer with experience in both frontend and backend technologies.</p>
+                <hr />
+                <p class="subtext"><a target="_blank" rel="noopener noreferrer" class="project-link" href="https://github.com/amberchiodini">Link to Website</a></p>
+            </div>
+        </div>
+    </section>
+    <section class="sub-section-alternative" id="projects">
         <h2>Projects</h2>
         <div class="project-container">
             <div class="project-card">
@@ -102,7 +125,7 @@
         <h3>Contact Me:</h3>
         <p>amber.park@northwestern.edu</p>
     </footer>
-
+    <script src="https://cdn.lordicon.com//libs/frhvbuzj/lord-icon-2.0.2.js"></script>
     <script src="src/app.js"></script>
 </body>
 
