Fixed typo in who am i section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <link rel="stylesheet" href="src/styles.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap"rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="UTF-8">
 </head>
@@ -12,9 +13,10 @@
 <body>
     <section class="hero">
         <nav>
-            <img class="logo" src="src/images/logo.png" alt="Amber Chiodini's logo"/>
+            <img class="logo" src="src/images/logo.png" alt="Amber Chiodini's logo" />
             <ul id="nav-list">
                 <li><a href="#about-me">About Me</a></li>
+                <li><a href="#who-am-i">Who Am I?</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact-me">Contact Me</a></li>
             </ul>
@@ -35,18 +37,19 @@
                     </a>
                 </div>
                 <div>
-                    <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/amber-chiodini-9699b211b">
-                    <i class="fa fa-linkedin-square" style="font-size:36px; color:white"></i>
+                    <a target="_blank" rel="noopener noreferrer"
+                        href="https://www.linkedin.com/in/amber-chiodini-9699b211b">
+                        <i class="fa fa-linkedin-square" style="font-size:36px; color:white"></i>
                     </a>
                 </div>
                 <div>
                     <a target="_blank" rel="noopener noreferrer" href="https://github.com/amberchiodini">
-                    <i class="fa fa-github" style="font-size:36px; color:white"></i>
+                        <i class="fa fa-github" style="font-size:36px; color:white"></i>
                     </a>
                 </div>
                 <div>
                     <a target="_blank" rel="noopener noreferrer" href="https://swhn19.com">
-                    <i class="fa fa-podcast" style="font-size:36px; color:white"></i>
+                        <i class="fa fa-podcast" style="font-size:36px; color:white"></i>
                     </a>
                 </div>
             </div>
@@ -56,32 +59,40 @@
         <div class="information">
             <h2>About Me</h2>
             <p>Hello, my name is Amber Chiodini. I am a Software Developer and Co-host of So What Happens Next.</p>
-            <div class="button-two"><a target="_blank" rel="noopener noreferrer" href="src/images/Chiodini_Resume.pdf">Resume</a></div>
+            <div class="button-two"><a target="_blank" rel="noopener noreferrer"
+                    href="src/images/Chiodini_Resume.pdf">Resume</a></div>
         </div>
         <div class="headshot-container">
-            <img class="headshot" src="src/images/new_profile.jpg"/>
+            <img class="headshot" src="src/images/new_profile.jpg" />
         </div>
     </section>
-    <section class="sub-section-alternative" id="projects">
+    <section class="sub-section-alternative" id="who-am-i">
         <h2>Who Am I?</h2>
         <div class="project-container">
             <div class="project-card">
-                <lord-icon src="https://cdn.lordicon.com//oswatybr.json" trigger="hover" colors="primary:#1c1d25,secondary:#ff7f50" style="width:200px;height:200px"></lord-icon>
+                <lord-icon src="https://cdn.lordicon.com//oswatybr.json" trigger="hover"
+                    colors="primary:#1c1d25,secondary:#ff7f50" style="width:200px;height:200px"></lord-icon>
                 <p class="subtext">Laboratory research technician investigating the causes of Alzheimer's disease.</p>
                 <hr />
-                <p class="subtext"><a target="_blank" rel="noopener noreferrer" class="project-link" href="https://www.brain.northwestern.edu/">Link to Website</a></p>
+                <p class="subtext"><a target="_blank" rel="noopener noreferrer" class="project-link"
+                        href="https://www.brain.northwestern.edu/">Link to Website</a></p>
             </div>
             <div class="project-card">
-                <lord-icon src="https://cdn.lordicon.com//fpipqhrr.json" trigger="hover" colors="primary:#121331,secondary:#ff7f50" style="width:200px;height:200px"></lord-icon>
-                <p class="subtext">Co-host of a podcast where we guess the plot, watch the movie, and give our first impressions.</p>
+                <lord-icon src="https://cdn.lordicon.com//fpipqhrr.json" trigger="hover"
+                    colors="primary:#121331,secondary:#ff7f50" style="width:200px;height:200px"></lord-icon>
+                <p class="subtext">Co-host of a podcast where we guess the plot, watch the movie, and give our first
+                    impressions.</p>
                 <hr />
-                <p class="subtext"><a target="_blank" rel="noopener noreferrer" class="project-link" href="https://swhn19.com">Link to Website</a></p>
+                <p class="subtext"><a target="_blank" rel="noopener noreferrer" class="project-link"
+                        href="https://swhn19.com">Link to Website</a></p>
             </div>
             <div class="project-card">
-                <lord-icon src="https://cdn.lordicon.com//anihkfxp.json" trigger="hover" colors="primary:#1c1d25,secondary:#ff7f50" style="width:200px;height:200px"></lord-icon>
+                <lord-icon src="https://cdn.lordicon.com//anihkfxp.json" trigger="hover"
+                    colors="primary:#1c1d25,secondary:#ff7f50" style="width:200px;height:200px"></lord-icon>
                 <p class="subtext">Software developer with experience in both frontend and backend technologies.</p>
                 <hr />
-                <p class="subtext"><a target="_blank" rel="noopener noreferrer" class="project-link" href="https://github.com/amberchiodini">Link to Website</a></p>
+                <p class="subtext"><a target="_blank" rel="noopener noreferrer" class="project-link"
+                        href="https://github.com/amberchiodini">Link to GitHub</a></p>
             </div>
         </div>
     </section>
@@ -91,34 +102,46 @@
             <div class="project-card">
                 <img class="project-image" src="src/images/gift.png" alt="" />
                 <h3>Keep on Giftin'</h3>
-                <p class="subtext">An application that reminds the user of certain dates to send to friends and family gifts and/or cards.</p>
+                <p class="subtext">An application that reminds the user of certain dates to send to friends and family
+                    gifts and/or cards.</p>
                 <hr />
-                <p class="subtext"><a target="_blank" rel="noopener noreferrer" class="project-link" href="https://keep-on-giftin.herokuapp.com/">Deployed App</a></p>
-                <p class="subtext"><a target="_blank" rel="noopener noreferrer" class="project-link" href="https://github.com/girl-power-5/ubiquitous-giggle">GitHub Repository</a></p>
+                <p class="subtext"><a target="_blank" rel="noopener noreferrer" class="project-link"
+                        href="https://keep-on-giftin.herokuapp.com/">Deployed App</a></p>
+                <p class="subtext"><a target="_blank" rel="noopener noreferrer" class="project-link"
+                        href="https://github.com/girl-power-5/ubiquitous-giggle">GitHub Repository</a></p>
             </div>
             <div class="project-card">
                 <img class="project-image" src="src/images/dating.png" alt="" />
                 <h3>IMOK</h3>
-                <p class="subtext">An application that gives the user the ability to let others know their current location when they go out.</p>
+                <p class="subtext">An application that gives the user the ability to let others know their current
+                    location when they go out.</p>
                 <hr />
-                <p class="subtext"><a target="_blank" rel="noopener noreferrer" class="project-link" href="https://imok-squad.herokuapp.com/">Deployed App</a></p>
-                <p class="subtext"><a target="_blank" rel="noopener noreferrer" class="project-link" href="https://github.com/girl-power-5/coffee-and-llamas">GitHub Repository</a></p>
+                <p class="subtext"><a target="_blank" rel="noopener noreferrer" class="project-link"
+                        href="https://imok-squad.herokuapp.com/">Deployed App</a></p>
+                <p class="subtext"><a target="_blank" rel="noopener noreferrer" class="project-link"
+                        href="https://github.com/girl-power-5/coffee-and-llamas">GitHub Repository</a></p>
             </div>
             <div class="project-card">
                 <img class="project-image" src="src/images/hamburger.png" alt="" />
                 <h3>Burger App</h3>
-                <p class="subtext">An application that allows the user to input and save the names of the burgers that they want to eat.</p>
+                <p class="subtext">An application that allows the user to input and save the names of the burgers that
+                    they want to eat.</p>
                 <hr />
-                <p class="subtext"><a target="_blank" rel="noopener noreferrer" class="project-link" href="https://polar-plains-27882.herokuapp.com/">Deployed App</a></p>
-                <p class="subtext"><a target="_blank" rel="noopener noreferrer" class="project-link" href="https://github.com/amberchiodini/burger">GitHub Repository</a></p>
+                <p class="subtext"><a target="_blank" rel="noopener noreferrer" class="project-link"
+                        href="https://polar-plains-27882.herokuapp.com/">Deployed App</a></p>
+                <p class="subtext"><a target="_blank" rel="noopener noreferrer" class="project-link"
+                        href="https://github.com/amberchiodini/burger">GitHub Repository</a></p>
             </div>
-            <div class="project-card"> 
+            <div class="project-card">
                 <img class="project-image" src="src/images/cooking.png" alt="" />
                 <h3>Eats & Beats</h3>
-                <p class="subtext">An application that brings a unique experience to the user by bringing up recipes and a music playlist.</p>
+                <p class="subtext">An application that brings a unique experience to the user by bringing up recipes and
+                    a music playlist.</p>
                 <hr />
-                <p class="subtext"><a target="_blank" rel="noopener noreferrer" class="project-link" href="https://team-norm-1.github.io/project-1/">Deployed App</a></p>
-                <p class="subtext"><a target="_blank" rel="noopener noreferrer" class="project-link" href="https://github.com/Team-Norm-1/project-1">GitHub Repository</a></p>
+                <p class="subtext"><a target="_blank" rel="noopener noreferrer" class="project-link"
+                        href="https://team-norm-1.github.io/project-1/">Deployed App</a></p>
+                <p class="subtext"><a target="_blank" rel="noopener noreferrer" class="project-link"
+                        href="https://github.com/Team-Norm-1/project-1">GitHub Repository</a></p>
             </div>
     </section>
     <footer id="contact-me">
