--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img class="logo" src="src/images/logo.png" alt="Amber Chiodini's logo" />
             <ul id="nav-list">
                 <li><a href="#about-me">About Me</a></li>
-                <li><a href="#who-am-i">Who Am I?</a></li>
+                <!-- <li><a href="#who-am-i">Who Am I?</a></li> -->
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact-me">Contact Me</a></li>
             </ul>
