Added email icon & changed footer

--- a/index.html
+++ b/index.html
@@ -32,11 +32,6 @@
             </div>
             <div class="socials">
                 <div>
-                    <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/amberchiodini">
-                        <i class="fa fa-twitter" style="font-size:36px; color: white"></i>
-                    </a>
-                </div>
-                <div>
                     <a target="_blank" rel="noopener noreferrer"
                         href="https://www.linkedin.com/in/amber-chiodini-9699b211b">
                         <i class="fa fa-linkedin-square" style="font-size:36px; color:white"></i>
@@ -50,6 +45,11 @@
                 <div>
                     <a target="_blank" rel="noopener noreferrer" href="https://swhn19.com">
                         <i class="fa fa-podcast" style="font-size:36px; color:white"></i>
+                    </a>
+                </div>
+                <div>
+                    <a target="_blank" rel="noopener noreferrer" href="mailto:mpark.amber@northwestern.edu">
+                        <i class="fa fa-envelope" style="font-size:36px; color:white"></i>
                     </a>
                 </div>
             </div>
@@ -145,8 +145,7 @@
             </div>
     </section>
     <footer id="contact-me">
-        <h3>Contact Me:</h3>
-        <p>amber.park@northwestern.edu</p>
+        <p>Made with <i class="fa fa-heart" style="color: coral;"></i> by Amber Chiodini</p>
     </footer>
     <script src="https://cdn.lordicon.com//libs/frhvbuzj/lord-icon-2.0.2.js"></script>
     <script src="src/app.js"></script>
