--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
                 <li><a href="#about-me">About Me</a></li>
                 <li><a href="#who-am-i">Who Am I?</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact-me">Contact Me</a></li>
             </ul>
             <button class="hamburger" id="hamburger">
                 <i class="fa fa-bars"></i>
@@ -144,7 +143,7 @@
                         href="https://github.com/Team-Norm-1/project-1">GitHub Repository</a></p>
             </div>
     </section>
-    <footer id="contact-me">
+    <footer>
         <p>Made with <i class="fa fa-heart" style="color: coral;"></i> by Amber Chiodini</p>
     </footer>
     <script src="https://cdn.lordicon.com//libs/frhvbuzj/lord-icon-2.0.2.js"></script>
