--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <section class="hero">
         <nav>
-            <img class="logo" src="src/images/logo.png" alt="Amber Chiodini's logo" />
+            <img class="logo" src="src/images/logo2.png" alt="Amber Chiodini's logo" />
             <ul id="nav-list">
                 <li><a href="#about-me">About Me</a></li>
                 <li><a href="#who-am-i">Who Am I?</a></li>
