Changed email address

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </a>
                 </div>
                 <div>
-                    <a target="_blank" rel="noopener noreferrer" href="mailto: amber.park@northwestern.edu">
+                    <a target="_blank" rel="noopener noreferrer" href="mailto:mpark.amber@gmail.com">
                         <i class="fa fa-envelope" style="font-size:36px; color:white"></i>
                     </a>
                 </div>
