--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
     <link rel="stylesheet" href="src/styles.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="UTF-8">
 </head>
@@ -25,7 +24,13 @@
         </nav>
         <div class="hero-area">
             <div class="hero-text">
-                <h1>Amber Chiodini</h1>
+                <!-- <h1>Amber Chiodini</h1> -->
+                <h1 class="ml11">
+                    <span class="text-wrapper">
+                      <span class="line line1"></span>
+                      <span class="letters">Amber Chiodini</span>
+                    </span>
+                </h1>
                 <p>Full Stack Developer</p>
                 <div class="button"><a href="#about-me">About Me</a></div>
             </div>
@@ -144,9 +149,10 @@
             </div>
     </section>
     <footer>
-        <p>Made with <i class="fa fa-heart" style="color: coral;"></i> by Amber Chiodini</p>
+        <p class="ml16">Made with <i class="fa fa-heart" style="color: coral;"></i> by Amber Chiodini</p>
     </footer>
     <script src="https://cdn.lordicon.com//libs/frhvbuzj/lord-icon-2.0.2.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script src="src/app.js"></script>
 </body>
 
